tests/baselines/reference/errorOnFunctionReturnType.errors.txt
tests/cases/conformance/jsdoc/foo.js(7,10): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
tests/cases/conformance/jsdoc/foo.js(13,5): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/conformance/jsdoc/foo.js(16,33): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
tests/cases/conformance/jsdoc/foo.js(21,13): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.


==== tests/cases/conformance/jsdoc/foo.js (4 errors) ====
    /**
     * @callback Func
     * @returns {Promise<number>}
     */
    
    /** @type {Func} */
    function test() {
             ~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
        console.log("Nope");
    }
    
    /** @type {Func} */
    async function test2() {
        return "asd";
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    }
    
    var test3 = /** @type {Func} */ function() {
                                    ~~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
        console.log("test")
    }
    
    /** @type {Func} */
    var test4 = function() {
                ~~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
        console.log("test")
    }